--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~47.0.6",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-document-picker": "^8.1.2",
+    "react-native-image-picker": "^4.10.1",
     "react-native-ionicons": "^4.6.5",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "expo-constants": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
