--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.2.1",
+    "cloudinary": "^1.32.0",
     "expo": "~47.0.6",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
