--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-image-picker": "^4.10.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
   },
