--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "async-storage": "^0.1.0",
     "axios": "^1.2.1",
     "cloudinary": "^1.32.0",
     "expo": "~47.0.6",
@@ -25,7 +27,8 @@
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-storage": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
