--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-document-picker": "^8.1.2",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-image-picker": "^4.10.1",
+    "react-native-input-select": "^0.18.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-select-dropdown": "^3.1.0",
     "react-native-storage": "^1.0.1"
   },
   "devDependencies": {
